# SignalExport

./: .gitignore  LICENSE  README.md  env.template  pyproject.toml
future/: README.md
scripts/: decrypt_assets.sh  signal_export.sh
src/signal_export/: __init__.py  cli.py  exporter.py  utils.py
src/signal_export/assets/: styles.css  template.html
tests/: conftest.py  test_call_events.py  test_cli.py  test_progress_bars.py  test_render.py  test_sanitizer.py  test_utils.py
tests/output/: index.html
tools/: decrypt_assets.py  sanitize_db.py
